# ai6z-twitter-agents

./: .gitignore  README.md
composio/: agent-gemini-vercel.js  agent-openai.js  package-lock.json  package.json
composio/filter-folllower-agent/: agent-gemini-vercel.js  agent-openai.js
composio/unfollower-agent/: agent-gemini-vercel.js  agent-openai.js
crewai_agent/: README.md  pyproject.toml  report.md
crewai_agent/src/crewai_agent/: crew.py  main.py
crewai_agent/src/crewai_agent/config/: agents.yaml  tasks.yaml
twitter-clients/filter-follower-client/: combine-json.js  combined-followers.json  combined-following.json  index.js  package.json  run-function-only-getFollowers.js  run-function-only-getFollowing.js  run-function-only-getProfileAndLatestTweets-Batch-Followers.js  run-function-only-getProfileAndLatestTweets-Batch-Following.js  run-function-only-getProfileAndLatestTweets.js
twitter-clients/filter-follower-client/following/: pseudokid.json
twitter-clients/twitter-content-listener/: index.js
twitter-clients/unfollower-client/: README.md  index.js  package-lock.json  package.json  run-function-only.js  run-standalone.js
