[project]
name = "crewai_agent"
version = "0.1.0"
description = "crewai-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
crewai_agent = "crewai_agent.main:run"
run_crew = "crewai_agent.main:run"
train = "crewai_agent.main:train"
replay = "crewai_agent.main:replay"
test = "crewai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
